[package]
name = "bitvmx-key-manager"
description = "A library for managing the collection of keys for the BitVMX protocol transactions"
version = "0.0.1"
edition = "2021"
authors = [
    "Diego Masini <diego.masini@gmail.com>",
    "Tomas Szejnfeld Sirkis",
    "Kevin Wahle",
]
repository = "https://github.com/FairgateLabs/rust-bitvmx-key-manager"

[lib]
name = "key_manager"

[dependencies]
anyhow = "1.0.97"
bitcoin = { version = "0.32.5", features = ["std", "rand-std", "serde"] }
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.11"
console = "0.15.11"
itertools = "0.14.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hex = "0.4.3"
rust-bitvmx-storage-backend = { path = "../rust-bitvmx-storage-backend" }
bitvmx-settings = { path = "../rust-bitvmx-settings" }
musig2 = { version = "0.2.3", features = ["serde", "rand"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"

[[bin]]
name = "key-manager"
path = "src/main.rs"

[[bench]]
name = "winternitz_bench"
harness = false
