[package]
name = "bitvmx-key-manager"
description = "A library for managing the collection of keys for the BitVMX protocol transactions"
version = "0.0.1"
edition = "2021"
authors = [
    "Diego Masini <diego.masini@gmail.com>",
    "Tomas Szejnfeld Sirkis",
    "Kevin Wahle",
]
repository = "https://github.com/FairgateLabs/rust-bitvmx-key-manager"
license = "MIT"
keywords = [
    "key management",
    "musig2",
    "cryptography",
    "security",
    "blockchain",
]
categories = ["cryptography", "security", "blockchain"]
readme = "README.md"

[lib]
name = "key_manager"

[dependencies]
anyhow = "1.0.97"
bitcoin = { version = "0.32.5", features = ["std", "rand-std", "serde"] }
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.11"
itertools = "0.14.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hex = "0.4.3"
rsa = "0.9.8"
sha2 = "0.10"
base64 = "0.22.0"
musig2 = { version = "0.2.3", features = ["serde", "rand"] }

rust-bitvmx-storage-backend = { path = "../rust-bitvmx-storage-backend" }
bitvmx-settings = { path = "../rust-bitvmx-settings" }

[dev-dependencies]
criterion = "0.6.0"
rand = "0.9.0"

[[bin]]
name = "key-manager"
path = "src/main.rs"

[[bench]]
name = "winternitz_bench"
harness = false
